# research-ABM-curvature-aware-calibration

./: .gitignore  BH_JAX_PREP.md  CLAUDE.md  README.md  paper_explainer.md  pyproject.toml
appendix/: supp.tex
docs/: 01_PROJECT_CHARTER.md  02_MATHEMATICAL_SPECIFICATION.md  03_CLAIMS_LEDGER.md  04_EXPERIMENT_REGISTRY.md  05_RESULTS_LEDGER.md  06_LITERATURE_MAP.md  07_DECISION_LOG.md  08_PAPER_ARCHITECTURE.md  README.md  brock_hommes_code_guide.md  manifest.json
experiments/: __init__.py  exp001_linear_ggn.py
inbox/: CODEBASE_AUDIT.md  EXP001_IMPLEMENTATION_PLAN.md  EXP001_REVIEW.md  EXP002_IMPLEMENTATION_PLAN.md
notebooks/: 00_walkthrough.ipynb  01_paper_figures.ipynb
paper/: figures  main.tex  refs.bib
scripts/: 01_brock_hommes_bifurcation.py  02_simulation_gallery.py  03_phase_portraits.py  04_mmd_landscape.py  05_gradient_cloud.py  06_calibration_dashboard.py  07_optimizer_comparison.py  08_falsification.py  09_horizon_bias.py  10_phase2_convergence.py  11_stiff_sloppy_decomposition.py  12_adam_lr_sweep.py  13_jacobian_comparison.py  14_multiseed_far_from_eq.py  15_hyperparam_robustness.py  16_sir_diagnostic.py  17_sir_calibration_race.py  18_network_sir_diagnostic.py  19_trajectory_bootstrap.py  20_merged_falsification.py  21_fig1_spectrum.py  22_fig3_predicts_adam.py  23_fig4_network_sir.py  24_surrogate_comparison.py  25_eigenvalue_trajectory.py  26_horizon_sensitivity_sir.py  27_jacobian_comparison_sir.py  28_bh_regime_diagnostic_suite.py  build_brock_hommes_paper.py  build_brock_hommes_walkthrough.py  build_notebook.py  build_paper_notebook.py  (+1 more)
(+114 files in other folders)
