[project]
name = "curvature_calib"
version = "0.0.1"
description = "Curvature-aware calibration of differentiable agent-based models via per-seed gradient OPG eigenstructure"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "Pietro Bicocchi" }]
dependencies = [
    "jax==0.4.30",
    "jaxlib==0.4.30",
    "numpy>=1.26",
    "scipy>=1.13",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-xdist>=3",
    "ruff>=0.6",
    "ipykernel>=6.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/curvature_calib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "NPY"]
